day-2/lesson-15-ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stooges-ingress
spec:
  backend:
    serviceName: stooges
    servicePort: 80
  rules:
  - host: stooges.info
    http:
      paths:
      - path: /moe
        backend:
          serviceName: moe
          servicePort: 3000
      - path: /larry
        backend:
          serviceName: larry
          servicePort: 3000
      - path: /curly
        backend:
          serviceName: curly
          servicePort: 3000
